fix markdown image overflow

--- a/frontend/src/components/post/Post.module.css
+++ b/frontend/src/components/post/Post.module.css
@@ -111,3 +111,7 @@
     font-size: 20px;
     overflow-wrap: break-word;
 }
+.postContent img {
+    max-width: 100%;
+    height: auto;
+}
